--- a/hello-world.yml
+++ b/hello-world.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
-
-name: self-hosted-runner
+# Updating YML not in allowed path to test build trigger
+name: hello-world-pd
 
 # Controls when the workflow will run
 on:
@@ -19,7 +19,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: self-hosted # windows
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
