--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -7,7 +7,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ "include-files" ]
-    
+    paths: 
+      - '.github/workflows/**.yml'    
   #pull_request:
     #branches: [ "include-files" ]
 
