--- a/hello-world.yml
+++ b/hello-world.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-# Updating YML not in allowed path to test build trigger
+# Updating YML not in allowed path to testing build trigger
 name: hello-world-pd
 
 # Controls when the workflow will run
