--- a/.github/workflows/branch-exclude.yml
+++ b/.github/workflows/branch-exclude.yml
@@ -2,7 +2,7 @@ name: MSBuild
 
 on:
   push:
-    branches: [ "branch1" ]
+   # branches: [ "branch1" ]
     branches-ignore: 
       - 'allowed-file'
       - 'exclude-file'
